--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,156 @@
-.bg-header {
+.container-xs {
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+.text-little {
+    font-size: .8rem;
+    color: white;
+}
+
+
+
+
+.pb-md-4-5 {
+    padding-bottom: 4.5rem;
+}
+
+
+.my-bg-header {
     background-color: #2c3e50;
+}
+
+.title-header {
+    color: white;
+    font-size: 1.3rem;
+    font-weight: 800;
+}
+
+header .btn {
+    width: 2.2rem;
+    padding: 1em 1.2rem 1rem 1.2rem;
+    border-radius: 4px;
+    height: 30px;
+    border-color: #b1b5ba;
+}
+
+header .btn i {
+    height: max-content;
+    font-size: 1.8rem;
+    color: #888888;
+    font-weight: 200;
+}
+
+.list-group-item {
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: .8rem;
+    font-weight: 600;
+}
+
+.img-max {
+    max-width: 230px;
+}
+
+.my-bg-s1,
+.my-bg-s3 {
+    background-color: #1abc9c;
+}
+
+.my-bg-s2 {
+    background-color: white;
+}
+
+.section-1 .line,
+.section-3 .line {
+    width: 10%;
+    height: 0;
+    background-color: white;
+    color: white;
+    border: 1.25px solid white;
+}
+
+.section-1 .fa-star,
+.section-3 .fa-star {
+    color: white;
+    font-size: 1.5rem;
+}
+
+h1 {
+    color: white;
+    font-weight: 600;
+}
+
+.job {
+    color: white;
+    font-size: 1rem;
+}
+
+h2 {
+    font-weight: 600;
+}
+
+.section-2 h2 {
+    color: #2c3e50;
+}
+
+.section-2 .line {
+    width: 12%;
+    height: 0;
+    background-color: #2c3e50;
+    color: white;
+    border: 1.25px solid #2c3e50;
+}
+
+.section-2 .fa-star {
+    color: #2c3e50;
+    font-size: 1.2rem;
+}
+
+.section-3 h2 {
+    color: white;
+}
+
+.section-3 div {
+    color: white;
+}
+
+.section-3 .btn {
+    border-color: white;
+    color: white;
+}
+
+.section-3 .btn i {
+    color: white;
+}
+
+footer {
+    background-color: #3a546d;
+}
+
+footer i {
+    color: white;
+}
+
+
+.circle-social {
+    flex-basis: 2.5rem;
+    aspect-ratio: 1 / 1;
+    border: 1px solid white;
+    border-radius: 50px; 
+}
+
+footer h3 {
+    color: white;
+}
+
+footer span {
+    color: #1abc9c;
+}
+
+.sub-footer {
+    background-color: #2c3e50;
+    font-size: .7rem;
+    color: white;
 }
