--- a/css/style.css
+++ b/css/style.css
@@ -1,138 +1,73 @@
+
+.header-page {
+    background-color: #1abc9c;
+}
+
+.header-page nav {
+    background-color: #2c3e50 !important;
+    height: 3.5rem;
+    z-index: 100;
+}
+
+.navbar-toggler {
+    border-color: white;
+    padding: .3em .5em;
+}
+
+.navbar i {
+    color: #6c757d;
+}
+
 .section-1 {
     margin-top: 3.5rem;
 }
 
-
-
-
-
-.container-xs {
-    max-width: 700px;
-    margin: 0 auto;
-}
-
-.text-little {
-    font-size: .7rem;
-    color: white;
-}
-
-
-.pb-md-4-5 {
-    padding-bottom: 4.5rem;
-}
-
-
-.my-bg-header {
-    background-color: #2c3e50;
-}
-
-
-.title-header {
-    color: white;
-    font-size: 1.3rem;
-    font-weight: 800;
-}
-
-header .btn {
-    width: 2.2rem;
-    padding: 1em 1.2rem 1rem 1.2rem;
-    border-radius: 4px;
-    height: 30px;
-    border-color: #b1b5ba;
-}
-
-header .btn i {
-    height: max-content;
-    font-size: 1.7rem;
-    color: #888888;
-    font-weight: 200;
-}
-
-.list-group-item {
-    background-color: transparent;
-    border: none;
-    color: white;
-    font-size: .8rem;
-    font-weight: 600;
-}
-
-.img-max {
-    max-width: 230px;
-}
-
-.my-bg-s1,
-.my-bg-s3 {
+.about {
     background-color: #1abc9c;
 }
 
-.my-bg-s2 {
-    background-color: white;
+.my_text {
+    font-size: .8rem;
 }
-
 
 
 .section-1 .line,
-.section-3 .line {
+.portfolio .line {
     width: 10%;
-    height: 0;
-    background-color: white;
-    color: white;
-    border: 1.25px solid white;
+    height: 3px;
 }
 
-.section-1 .fa-star,
-.section-3 .fa-star {
+.about .line,
+.contact-me .line {
+    width: 12%;
+    height: 3px;
+    background-color: #2c3e50;
     color: white;
-    font-size: 1.5rem;
+    border: 1.25px solid #2c3e50;
 }
 
-h1 {
-    color: white;
-    font-weight: 600;
+.fa-star {
+    font-size: 1.2rem;
 }
+
 
 .job {
     color: white;
     font-size: .9rem;
 }
 
-h2 {
-    font-weight: 600;
-}
 
 .section-2 h2 {
     color: #2c3e50;
 }
 
-.section-2 .line {
-    width: 12%;
-    height: 0;
-    background-color: #2c3e50;
-    color: white;
-    border: 1.25px solid #2c3e50;
-}
 
-.section-2 .fa-star {
+
+.portfolio .fa-star {
     color: #2c3e50;
     font-size: 1.2rem;
 }
 
-.section-3 h2 {
-    color: white;
-}
-
-.section-3 div {
-    color: white;
-}
-
-.section-3 .btn {
-    border-color: white;
-    color: white;
-}
-
-.section-3 .btn i {
-    color: white;
-}
 
 footer {
     background-color: #3a546d;
@@ -147,7 +82,7 @@ footer i {
     flex-basis: 2.5rem;
     aspect-ratio: 1 / 1;
     border: 1px solid white;
-    border-radius: 50px; 
+    border-radius: 50px;
 }
 
 footer h3 {
@@ -162,4 +97,62 @@ footer span {
     background-color: #2c3e50;
     font-size: .6rem;
     color: white;
+}
+
+/* Contact Me */
+
+form .form-control {
+    border: none;
+    border-bottom: 1px solid #ced4da;
+    border-radius: 0;
+}
+
+form textarea {
+    height: 50%;
+}
+
+.contact-me button {
+    background-color: #1abc9c;
+    border: 0 ;
+}
+
+
+
+
+
+
+
+
+
+.layover {
+    z-index: -1;
+    inset: 0;
+    background-color: rgba(33, 165, 79, 0.7);  
+}
+
+.layover i {
+    font-size: 4rem;
+    font-weight: bold;
+    color: white;
+}
+
+
+
+/* Hover */
+
+.my_card:hover .layover {
+    z-index: 1;
+}
+
+header .navbar li :hover {
+    color: #1abc9c !important;
+}
+
+.contact-me button:hover {
+    background-color: #6c757d;
+}
+
+.form-control:focus {
+    border-color: white;
+    box-shadow: 0.25rem 0.125rem .3rem #6c757d;
 }
