--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,99 @@
+body {
+    font-family: 'Public Sans', sans-serif;
+}
 
+
+
+/* General styles */
+
+.my_h1 {
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.my_h2 {
+    font-size: 1.6rem;
+    font-weight: 700;
+}
+
+.my_h3 {
+    font-size: .8rem;
+    font-weight: 600;
+}
+
+.my_h3-nav {
+    font-size: 1rem;
+    font-weight: 800;
+}
+
+.my_h4 {
+    font-size: .8rem;
+}
+
+.my_h4-nav {
+    font-size: .7rem;
+    font-weight: 700;
+}
+
+
+.my_text {
+    font-size: .7rem;
+    font-weight: 500;
+}
+
+.my_text-subfooter {
+    font-size: .6rem;
+}
+
+.contact-me h2,
+.portfolio h2 {
+    color: #2c3e50;   
+}
+
+.contact-me .fa-star,
+.portfolio .fa-star {
+    font-size: 1.2rem;
+    color: #2c3e50;
+}
+
+.section-1 .fa-star,
+.about .fa-star {
+    font-size: 1.2rem;
+    color: #2c3e50;
+}
+
+.section-1 .line {
+    width: 8%;
+    background-color: white;
+    border: 1.5px solid white;
+
+}
+
+.portfolio .line {
+    width: 8%;
+    color: #2c3e50;
+    border: 1.5px solid #2c3e50;
+    background-color: #2c3e50;
+}
+
+.about .line {
+    width: 8%;
+    background-color: white; 
+    border: 1.5px solid white;
+}
+
+.contact-me .line {
+    width: 11%;
+    color: #2c3e50;
+    border: 1.5px solid #2c3e50;
+    background-color: #2c3e50;
+}
+
+
+
+/* Navbar */
+
+ 
 .header-page {
     background-color: #1abc9c;
 }
@@ -18,86 +113,39 @@
     color: #6c757d;
 }
 
+
+
+/* First Section */
+
 .section-1 {
     margin-top: 3.5rem;
 }
+
+
+
+/* Portfolio */
+
+.layover {
+    z-index: -1;
+    inset: 0;
+    background-color: rgba(33, 165, 79, 0.7);  
+}
+
+.layover i {
+    font-size: 4rem;
+    font-weight: bold;
+    color: white;
+}
+
+
+
+/* About */
 
 .about {
     background-color: #1abc9c;
 }
 
-.my_text {
-    font-size: .8rem;
-}
 
-
-.section-1 .line,
-.portfolio .line {
-    width: 10%;
-    height: 3px;
-}
-
-.about .line,
-.contact-me .line {
-    width: 12%;
-    height: 3px;
-    background-color: #2c3e50;
-    color: white;
-    border: 1.25px solid #2c3e50;
-}
-
-.fa-star {
-    font-size: 1.2rem;
-}
-
-
-.job {
-    color: white;
-    font-size: .9rem;
-}
-
-
-.section-2 h2 {
-    color: #2c3e50;
-}
-
-
-
-.portfolio .fa-star {
-    color: #2c3e50;
-    font-size: 1.2rem;
-}
-
-
-footer {
-    background-color: #3a546d;
-}
-
-footer i {
-    color: white;
-}
-
-
-.circle-social {
-    flex-basis: 2.5rem;
-    aspect-ratio: 1 / 1;
-    border: 1px solid white;
-    border-radius: 50px;
-}
-
-footer h3 {
-    color: white;
-}
-
-footer span {
-    color: #1abc9c;
-}
-
-.sub-footer {
-    background-color: #2c3e50;
-    font-size: .6rem;
-    color: white;
-}
 
 /* Contact Me */
 
@@ -118,22 +166,25 @@ form textarea {
 
 
 
+/* Footer */
 
-
-
-
-
-
-.layover {
-    z-index: -1;
-    inset: 0;
-    background-color: rgba(33, 165, 79, 0.7);  
+footer {
+    background-color: #3a546d;
 }
 
-.layover i {
-    font-size: 4rem;
-    font-weight: bold;
-    color: white;
+.circle-social {
+    flex-basis: 2.5rem;
+    aspect-ratio: 1 / 1;
+    border: 1px solid white;
+    border-radius: 50px;
+}
+
+footer span {
+    color: #1abc9c;
+}
+
+.sub-footer {
+    background-color: #2c3e50;
 }
 
 
