--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ body {
     color: #2c3e50;
 }
 
+.line {
+    min-width: 50px;
+}
+
 .section-1 .line {
     width: 8%;
     background-color: white;
