--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,10 @@ body {
     background-color: #2c3e50;
 }
 
+a {
+    text-decoration: none;
+}
+
 
 
 /* Navbar */
@@ -104,7 +108,7 @@ body {
 
 .header-page nav {
     background-color: #2c3e50 !important;
-    height: 3.5rem;
+    /* height: 3.5rem; */
     z-index: 100;
 }
 
@@ -119,10 +123,11 @@ body {
 
 
 
+
 /* First Section */
 
 .section-1 {
-    margin-top: 3.5rem;
+    margin-top: 50px;
 }
 
 
@@ -211,3 +216,12 @@ header .navbar li :hover {
     border-color: white;
     box-shadow: 0.25rem 0.125rem .3rem #6c757d;
 }
+
+footer a:hover {
+    background-color: white;
+}
+
+footer a:hover i {
+    color: #3a546d !important;
+}
+
